# insurance-datasets

./: CHANGELOG.md  README.md  pyproject.toml  run_benchmark_databricks.py  run_tests_databricks.py
benchmarks/: run_benchmark.py
notebooks/: benchmark.py  insurance_datasets_demo.py
src/insurance_datasets/: __init__.py  home.py  motor.py
tests/: test_extended.py  test_home.py  test_motor.py  test_polars.py
