[project]
name = "insurance-datasets"
version = "0.1.0"
description = "Synthetic UK insurance datasets with known data generating processes"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = ["insurance", "actuarial", "synthetic data", "GLM", "pricing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://github.com/burningcost/insurance-datasets"
Repository = "https://github.com/burningcost/insurance-datasets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_datasets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
