[project]
name = "insurance-datasets"
version = "0.1.3"
description = "Synthetic UK insurance datasets with known data generating processes"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = ["insurance", "actuarial", "synthetic data", "GLM", "pricing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
polars = [
    "polars>=0.20",
    "pyarrow>=12.0",
]
dev = [
    "pytest>=8.0",
    # statsmodels>=0.14.5 is required: 0.14.4 and earlier use scipy._lib._util._lazywhere
    # which was removed in scipy 1.16+. The fix landed in statsmodels 0.14.5 (Jul 2024)
    # and was completed in 0.14.6 (Dec 2024).
    "statsmodels>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-datasets"
Repository = "https://github.com/burning-cost/insurance-datasets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_datasets"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "statsmodels>=0.14.6",
]
